# microblog

./: README.md
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-12-21-213650_users/: down.sql  up.sql
backend/src/: db.rs  main.rs  models.rs  schema.rs  utils.rs
backend/src/models/: users.rs
backend/src/routes/: mod.rs  register.rs
client/: .gitignore  CHANGELOG.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json
client/src/: App.tsx  config.ts  index.css  main.tsx
client/src/assets/: outlook.ics
client/src/components/: PrivateRoute.tsx
client/src/components/Header/: Header.css  Header.tsx
client/src/components/Login/: Login.css  Login.tsx
client/src/components/Register/: Register.tsx
client/src/utils/: auth.ts
server/: .gitignore  CHANGELOG.md  nodemon.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: envVars.ts  main.ts  prisma.ts
server/src/controllers/: LoginController.ts  SessionController.ts
server/src/services/: LoginService.ts  SessionService.ts
shared/: CHANGELOG.md  index.ts  package.json  tsconfig.json
shared/schemas/: LoginSchema.ts  index.ts  registerSchema.ts
